--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,15 @@
       </properties>
 
   <dependencies>
-                        <dependency>
+
+     <dependency>
       <groupId>javax.enterprise</groupId>
       <artifactId>cdi-api</artifactId>
       <version>2.0.SP1</version>
       <scope>provided</scope>
-    </dependency>                                    <dependency>
+    </dependency>
+
+    <dependency>
       <groupId>javax.ws.rs</groupId>
       <artifactId>javax.ws.rs-api</artifactId>
       <version>2.1.1</version>
@@ -45,7 +48,13 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
-    </dependency>      </dependencies>
+    </dependency>
+    <dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+      <version>1.3.04</version>
+    </dependency>
+  </dependencies>
 
   <build>
         <plugins>
